--- a/ansibleplaybook.yml
+++ b/ansibleplaybook.yml
@@ -2,6 +2,14 @@
 - name: Build and run Docker container
   hosts: localhost
   become: yes  # If you need root privileges to manage Docker
+  vars:
+    # Docker Hub credentials and image details
+    dockerhub_username: "sivakumar746"  # Replace with your Docker Hub username
+    dockerhub_password: "Hussain@2024"  # Replace with your Docker Hub password
+    docker_image_name: "your-app"            # Replace with the name of your Docker image
+    docker_image_tag: "latest"                      # Replace with your image tag (e.g., "latest")
+    dockerhub_repo: "sivakumar746/jenkinsc-cicd"  # Docker Hub repository (username/repo-name)
+
   tasks:
     - name: Build the Docker image
       docker_image:
@@ -19,4 +27,23 @@
         exposed_ports:
           - "8080"
         published_ports:
-          - "8080:8080"
+          - "8080:8080"- name: Login to Docker Hub
+      community.docker.docker_login:
+        username: "{{ dockerhub_username }}"
+        password: "{{ dockerhub_password }}"
+
+    - name: Tag the image for Docker Hub
+      community.docker.docker_image:
+        name: "{{ dockerhub_repo }}"
+        tag: "{{ docker_image_tag }}"
+        image: "{{ docker_image_name }}:{{ docker_image_tag }}"
+        state: present
+      when: docker_build.changed  # Only tag if the build was successful
+
+    - name: Push Docker image to Docker Hub
+      community.docker.docker_image:
+        name: "{{ dockerhub_repo }}"
+        tag: "{{ docker_image_tag }}"
+        source: push
+      when: docker_build.changed  # Only push if the build was successful
+    
