--- a/newplaybook.yml
+++ b/newplaybook.yml
@@ -1,49 +1,53 @@
 ---
-- name: Build and run Docker container
-  hosts: localhost
-  become: yes  # If you need root privileges to manage Docker
-  vars:
-    # Docker Hub credentials and image details
-    dockerhub_username: "sivakumar746"  # Replace with your Docker Hub username
-    dockerhub_password: "Hussain@2024"  # Replace with your Docker Hub password
-    docker_image_name: "your-app"            # Replace with the name of your Docker image
-    docker_image_tag: "latest"                      # Replace with your image tag (e.g., "latest")
-    dockerhub_repo: "sivakumar746/jenkinsc-cicd"  # Docker Hub repository (username/repo-name)
-
+- name: Install Apache Tomcat
+  hosts: webservers
+  become: yes  # If you need root privileges to install packages
   tasks:
-    - name: Build the Docker image
-      docker_image:
-        name: your-app
-        build:
-          path: /Dockerfile
-        state: present
 
-    - name: Start Docker container from image
-      docker_container:
-        name: your-app-container
-        image: your-app
+    - name: Download Tomcat tar.gz
+      get_url:
+        url: "https://dlcdn.apache.org/tomcat/tomcat-10/v10.1.34/bin/apache-tomcat-10.1.34.tar.gz"
+        dest: "/tmp/apache-tomcat-10.1.34.tar.gz"
+
+    - name: Extract Tomcat tar.gz
+      unarchive:
+        src: "/tmp/apache-tomcat-10.1.34.tar.gz"
+        dest: "/opt/"
+        remote_src: yes
+
+    - name: Set correct permissions for Tomcat
+      file:
+        path: "/opt/apache-tomcat-10.1.34"
+        owner: tomcat
+        group: tomcat
+        mode: '0755'
+        recurse: yes
+
+    - name: Create a systemd service for Tomcat
+      copy:
+        dest: /etc/systemd/system/tomcat.service
+        content: |
+          [Unit]
+          Description=Tomcat 10 servlet container
+          After=network.target
+
+          [Service]
+          User=tomcat
+          Group=tomcat
+          ExecStart=/opt/apache-tomcat-10.1.34/bin/catalina.sh run
+          ExecStop=/opt/apache-tomcat-10.1.34/bin/catalina.sh stop
+          Type=forking
+          Restart=always
+
+          [Install]
+          WantedBy=multi-user.target
+
+    - name: Reload systemd to apply changes
+      systemd:
+        daemon_reload: yes
+
+    - name: Enable Tomcat service
+      systemd:
+        name: tomcat
+        enabled: yes
         state: started
-        restart_policy: always
-        exposed_ports:
-          - "8080"
-        published_ports:
-          - "8080:8080"- name: Login to Docker Hub
-      community.docker.docker_login:
-        username: "{{ dockerhub_username }}"
-        password: "{{ dockerhub_password }}"
-
-    - name: Tag the image for Docker Hub
-      community.docker.docker_image:
-        name: "{{ dockerhub_repo }}"
-        tag: "{{ docker_image_tag }}"
-        image: "{{ docker_image_name }}:{{ docker_image_tag }}"
-        state: present
-      when: docker_build.changed  # Only tag if the build was successful
-
-    - name: Push Docker image to Docker Hub
-      community.docker.docker_image:
-        name: "{{ dockerhub_repo }}"
-        tag: "{{ docker_image_tag }}"
-        source: push
-      when: docker_build.changed  # Only push if the build was successful
-    
