--- a/newplaybook.yml
+++ b/newplaybook.yml
@@ -51,3 +51,10 @@
         name: tomcat
         enabled: yes
         state: started
+    - name: Copy file with owner and permissions
+      ansible.builtin.copy:
+        src: /root/demo/workspace/pipeline-project
+        dest: /home/ubuntu/apache-tomcat-10.1.34/webapps/
+        owner: root
+        group: root
+        mode: '0644'
